<resources>
    <string name="app_name">HBoxTv</string>
    <string name="mail_input">Email Address</string>
    <string name="_input">Password</string>
    <string name="need_help">Need help?</string>
    <string name="tv_sign_up_text">New to HBoxTv? Sign up now.</string>
    <string name="tv_sign_in_text">Sign In</string>
    <string name="sign_in">Sign in</string>
    <string name="home_btn">Home</string>
    <string name="search_btn">Search</string>
    <string name="coming_soon_btn">Coming Soon</string>
    <string name="downloads_btn">Downloads</string>
    <string name="more_btn">More</string>
    <string name="toolbar_tvshows">TV Shows</string>
    <string name="toolbar_movies">Movies</string>
    <string name="home_my_list">My List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="sign_up_text">Sign Up</string>
</resources>