<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.SignInActivity">

    <include layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/black"
            android:padding="1dp"
            android:textColorHint="#A8A6A6"
            app:errorEnabled="true"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.346">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/mail_input"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#FFFEFE" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/black"
            android:padding="1dp"
            android:textColorHint="#A8A6A6"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/_input"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/white"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/need_help_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/need_help"
            android:textColor="#A8A6A6"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_password"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/text_input_layout_password"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/tv_sign_up_text"
            android:textColor="#2196F3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/need_help_textView"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/need_help_textView"
            app:layout_constraintTop_toBottomOf="@+id/need_help_textView" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_stroke"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FFFEFE"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_password"
            app:layout_constraintStart_toStartOf="@+id/text_input_layout_password"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>