<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".activities.SignUpActivity">

    <include layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/text_input_email1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/mail_input"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#A8A6A6"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="1"
            android:autofillHints="@null"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.346" />

        <EditText
            android:id="@+id/text_input_password1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password_input"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#A8A6A6"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="1"
            android:autofillHints="@null"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_email1" />

        <EditText
            android:id="@+id/text_input_confirm_password1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/confirm_password_text"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#A8A6A6"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="1"
            android:autofillHints="@null"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_password1" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:indeterminateTint="@color/purple_200"
            app:layout_constraintStart_toStartOf="@+id/text_input_password1"
            app:layout_constraintEnd_toEndOf="@+id/text_input_password1"
            app:layout_constraintTop_toBottomOf="@+id/text_input_confirm_password1"
            app:layout_constraintBottom_toTopOf="@+id/button_sign_up"/>

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_stroke"
            android:text="@string/sign_up_text"
            android:textAllCaps="false"
            android:textColor="#FFFEFE"
            android:textSize="19sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="@+id/text_input_password1"
            app:layout_constraintStart_toStartOf="@+id/text_input_password1"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

        <!--<com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/background_app"
            android:padding="1dp"
            android:textColorHint="#A8A6A6"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.346">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:hint="@string/mail_input"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#FFFEFE"
                android:fontFamily="@font/poppins_regular"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/background_app"
            android:padding="1dp"
            android:textColorHint="#A8A6A6"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:hint="@string/password_input"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/white"
                android:fontFamily="@font/poppins_regular"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/background_app"
            android:padding="1dp"
            android:textColorHint="#A8A6A6"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:hint="@string/confirm_password_text"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/white"
                android:fontFamily="@font/poppins_regular"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_stroke"
            android:text="@string/sign_up_text"
            android:textAllCaps="false"
            android:textColor="#FFFEFE"
            android:textSize="19sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />-->

        <!--<TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/tv_sign_in_text"
            android:textColor="#2196F3"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="@+id/button_sign_up"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/button_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>